# luajit

./: .gitignore  .luacheckrc  CMakeLists.txt
cmake/: SetTargetFlags.cmake
etc/: CMakeLists.txt
src/: CMakeLists.txt  Makefile.original  lib_jit.c  lib_misc.c  lj_debug.c  lj_memprof.c  lj_memprof.h  lj_obj.h  lj_prof_symtab.c  lj_prof_symtab.h  lj_profile.c  lj_profile_state_impl.h  lj_sigtimer.c  lj_sigtimer.h  lj_state.c  lj_sysprof.h  lj_system_profile.h  lj_timer.c  lj_timer.h  lmisclib.h  luajit.h  vm_x86.dasc
src/host/: CMakeLists.txt
src/profile/: callchain.c  callchain.h  iobuffer.c  iobuffer.h  profile.c  profile.h  profile_impl.h  shared_objects.c  shared_objects.h  sotab.c  sotab.h  stream.c  sym_finder.h  symtab.c  symtab.h  sysprof.c  sysprof_impl.h  write.c  write.h
test/: CMakeLists.txt  misclib-getmetrics-capi.test.lua  misclib-getmetrics-lapi.test.lua
test/LuaJIT-test-cleanup/: CMakeLists.txt  test.lua  tests_list
test/LuaJIT-test-cleanup/lang/: assignment.lua  index
test/LuaJIT-test-cleanup/lang/meta/: cat.lua  index  newindex.lua
test/LuaJIT-test-cleanup/lib/: contents.lua  index
test/LuaJIT-tests/: CMakeLists.txt
test/PUC-Lua-5.1-tests/: CMakeLists.txt  all.lua  closure.lua  constructs.lua  db.lua  errors.lua  gc.lua  literals.lua  main.lua  math.lua  nextvar.lua  pm.lua  strings.lua  vararg.lua  verybig.lua
test/lua-Harness/: 090-tap.t  091-profile.t  101-boolean.t  102-function.t  103-nil.t  104-number.t  105-string.t  106-table.t  107-thread.t  108-userdata.t  200-examples.t  201-assign.t  202-expr.t  203-lexico.t  204-grammar.t  211-scope.t  212-function.t  213-closure.t  214-coroutine.t  221-table.t  222-constructor.t  223-iterator.t  231-metatable.t  232-object.t  241-standalone.t  242-luac.t  301-basic.t  303-package.t  304-string.t  305-utf8.t  306-table.t  307-math.t  308-io.t  309-os.t  310-debug.t  311-bit32.t  314-regex.t  320-stdin.t  401-bitop.t  402-ffi.t  (+6 more)
test/lua-Harness-tests/: 090-tap.t  091-profile.t  101-boolean.t  102-function.t  103-nil.t  104-number.t  105-string.t  106-table.t  107-thread.t  108-userdata.t  200-examples.t  201-assign.t  202-expr.t  203-lexico.t  204-grammar.t  211-scope.t  212-function.t  213-closure.t  214-coroutine.t  221-table.t  222-constructor.t  223-iterator.t  231-metatable.t  232-object.t  241-standalone.t.disabled  242-luac.t  301-basic.t  303-package.t  304-string.t  305-utf8.t.disabled  306-table.t  307-math.t  308-io.t  309-os.t  310-debug.t  311-bit32.t  314-regex.t  320-stdin.t  401-bitop.t  402-ffi.t  (+5 more)
test/tarantool-tests/: CMakeLists.txt  misclib-getmetrics-lapi.test.lua  misclib-sysprof-lapi.test.lua  tap.lua
tools/: CMakeLists.txt  jitted  luajit-parse-sysprof  luajit-parse-sysprof.in  memprof.lua  sysprof.lua
tools/memprof/: humanize.lua  parse.lua
tools/sysprof/: collapse.lua  humanize.lua  parse.lua  sysprof_collapse.lua  sysprof_parse.lua
tools/sysprof/symbols/: CMakeLists.txt  demangle.h  main.c
tools/utils/: bufread.lua  elf.lua  sotab.lua  symtab.lua
tools/utils/demangle/: .gitignore  CMakeLists.txt  build-run.sh  demangle.c  demangle.h  elf.c  elf.h  hash.c  main.c  utils.c  vector.c
